--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -387,4 +387,14 @@
         <item name="android:layout_marginStart">8dp</item>
     </style>
 
+    <style name="OutfitBlockTitle">
+        <item name="android:background">@drawable/home_activity_block_title</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingStart">8dp</item>
+    </style>
+
 </resources>
