--- a/app/src/main/res/layout/activity_wardrobe.xml
+++ b/app/src/main/res/layout/activity_wardrobe.xml
@@ -14,17 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/addNewWardrobeElement"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#FFBDBD"
-            app:borderWidth="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/ic_round_add"
-            android:layout_margin="16dp" />
-
         <android.support.constraint.ConstraintLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
@@ -32,57 +21,102 @@
 
             <include layout="@layout/toolbar" />
 
-                <LinearLayout
-                    android:id="@+id/syncBlock"
+            <LinearLayout
+                android:id="@+id/wardrobeListPanel"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:orientation="vertical" >
+
+                <Button
+                    android:id="@+id/wardrobeSearchButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:text="@string/wardrobe_search_button"
+                    style="@style/WardrobeListSearchButton" />
+
+                <Button
+                    android:id="@+id/wardrobeSearchClose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:text="@string/wardrobe_search_cancel"
+                    style="@style/WardrobeListSearchCancel"
+                    android:visibility="gone" />
+
+                <ListView
+                    android:id="@+id/myList"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintBottom_toTopOf="@+id/myList"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/toolbar">
+                    android:divider="#FFFFFF"/>
 
-                    <Button
-                        android:id="@+id/wardrobeSyncButton"
-                        style="@style/SyncButton"
-                        android:drawableStart="@android:drawable/stat_notify_sync"
-                        android:onClick="clickOnSync"
-                        android:text="@string/sync_with_api"/>
+            </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/wardrobeSyncInfo"
+            <ScrollView
+                android:id="@+id/wardrobeSearchPanel"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="gone" >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layout_constraintBottom_toTopOf="@+id/myList"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-                        android:visibility="gone">
+                        android:text="@string/wardrobe_search_panel_title"
+                        style="@style/WardrobeSearchPanelTitle" />
 
-                        <ProgressBar
-                            android:layout_width="32dp"
-                            android:layout_height="32dp" />
+                    <LinearLayout
+                        android:id="@+id/wardrobeSearchPanelTypes"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        style="@style/OutfitBlockElement" >
 
-                        <TextView
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/wardrobeSearchPanelColors"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        style="@style/OutfitBlockElement" >
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" >
+
+                        <Button
+                            android:id="@+id/wardrobeSearchLaunch"
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
-                            android:text="@string/is_synching"
-                            style="@style/SyncMessage"/>
+                            android:text="@string/wardrobe_search_launch"
+                            style="@style/WardrobeListSearchButton" />
+
+                        <Button
+                            android:id="@+id/wardrobeSearchCancel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="32dp"
+                            android:text="@string/wardrobe_search_cancel"
+                            style="@style/WardrobeListSearchCancel" />
 
                     </LinearLayout>
 
                 </LinearLayout>
 
-            <ListView
-                android:id="@+id/myList"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/syncBlock"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:divider="#FFFFFF"/>
+            </ScrollView>
 
         </android.support.constraint.ConstraintLayout>
 
@@ -103,6 +137,27 @@
             app:layout_constraintVertical_bias="0.351"
             android:text="@string/wardrobe_no_entries"
             android:visibility="gone"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addNewWardrobeElement"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFBDBD"
+            app:borderWidth="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_round_add"
+            android:layout_margin="16dp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone" />
 
     </android.support.constraint.ConstraintLayout>
 
