--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -357,6 +357,17 @@
         <item name="android:elevation">8dp</item>
     </style>
 
+    <style name="OutfitBlockElement">
+        <item name="android:background">@drawable/outfit_activity_element_block</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:elevation">16dp</item>
+    </style>
+
     <style name="OutfitDetailTitle">
         <item name="android:fontFamily">@font/raleway_semi_bold</item>
         <item name="android:textColor">#000000</item>
@@ -392,6 +403,52 @@
         <item name="android:textSize">16sp</item>
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:textColor">#000000</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingStart">8dp</item>
+    </style>
+
+    <style name="OutfitDetailElementType">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#334455</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingStart">8dp</item>
+    </style>
+
+    <style name="OutfitDetailElementColors">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#556677</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingStart">8dp</item>
+    </style>
+
+    <style name="WardrobeListSearchButton">
+        <item name="android:background">@drawable/outfit_detail_rename_button</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:drawableTint">#FFFFFF</item>
+    </style>
+
+    <style name="WardrobeListSearchCancel">
+        <item name="android:background">@drawable/wardrobe_list_search_cancel</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:drawableTint">#FFFFFF</item>
+    </style>
+
+    <style name="WardrobeSearchPanelTitle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#556677</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:layout_marginStart">8dp</item>
         <item name="android:paddingEnd">8dp</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="android:paddingStart">8dp</item>
